# Simple-Wasm-Game

./: CMakeLists.txt  index.html  packer.cpp  wasm.cpp
